Revert "CB-29404-Syncer for detecting manually attached NAT Gateways"
This reverts commit 3771fc8fa068c386dab258ffb1519f6b342df117.